test/cases/compile_errors/assign_unreachable.zig
export fn f() void {
    const a = return;
    _ = a;
}

// error
//
// :2:5: error: unreachable code
// :2:15: note: control flow is diverted here
